# codeofpaper-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml
codeofpaper_cli/: __init__.py  client.py  config.py  exit_codes.py  formatters.py  main.py  state.py  url_parser.py
codeofpaper_cli/commands/: __init__.py  auth.py  batch.py  categories.py  code.py  code_drops.py  conference.py  conferences.py  export.py  open_cmd.py  paper.py  random.py  repo.py  research.py  search.py  similar.py  status.py  suggest.py  trending.py
codeofpaper_cli/mcp/: __init__.py  server.py  tools.py
tests/: test_batch.py  test_client.py  test_commands.py  test_config_auth.py  test_edge_cases.py  test_exit_codes.py  test_export.py  test_formatters.py  test_mcp_tools.py  test_research.py  test_url_parser.py
